<!--
  ~ Copyright 2017-2019 Nikolaos Petalidis
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
    <string name="app_name">RECAP Animal Inspect</string>
    <string name="title_activity_create_inspection">Δημιουργία Ελέγχου</string>
    <string name="title_activity_inspection_step_one">Καταχώρηση ημ/νιας ελέγχου</string>
    <string name="title_activity_inspection_step_two">Καταχώρηση ελεγχομένων</string>
    <string name="title_activity_inspection_step_three">Καταχώρηση ενωτίων</string>
    <string name="title_activity_inspection_view">Εμφάνιση ελέγχου</string>
    <string name="title_activity_view_rsg">Προβολή λεπτομερειών</string>
    <string name="title_activity_calendar">Ημερολόγιο</string>
    <string name="title_home">Αρχική Σελίδα</string>
    <string name="title_dashboard">Πίνακας Επιλογών</string>
    <string name="title_notifications">Ειδοποιήσεις</string>
    <string name="step4Activity">Επόμενο βήμα: Ζώα με συμβατική σήμανση</string>
    <string name="step5Activity">Επόμενο βήμα: Ζώα χωρίς ηλ. σήμανση που καταγράφονται εν ζωή</string>
    <string name="save_inspection">Αποθήκευση ελέγχου</string>
    <string name="cancel">Άκυρο</string>
    <string name="pickUsb">Διάλεξε συσκευή</string>
    <string name="countryText">Χώρα</string>
    <string name="identificationText">Ταυτότητα</string>
    <string name="timeText">Ώρα</string>
    <string name="synchronizeText">Συγχρονισμός Scanner</string>
    <string name="showSessionsText">Απλή θέαση δεδομένων Scanner</string>
    <string name="failedReadWritePermissionsText">Δε δόθηκαν δικαιώματα ανάγνωσης/γραφής</string>
    <string name="failedGpsPermissionsText">Δε δόθηκαν δικαιώματα ανάγνωσης τοποθεσίας</string>
    <string name="msg_failed_sync">Δε βρέθηκε συνδεδεμένo scanner ή δεν υπάρχουν sessions</string>
    <string name="inspectionFunctions">Διαχείριση Ελέγχων</string>
    <string name="inspectionFunctionsDescription">Εμφάνιση και δημιουργία νέων ελέγχων</string>
    <string name="success">Επιτυχία!</string>
    <string name="historicalPeriod">Πριν το 2010</string>
    <string name="notHistoricalPeriod">Μετά το 2010</string>
    <string name="single">Μονό</string>
    <string name="singleTitleBefore10">Μονό ενώτιο (&lt; 2010)</string>
    <string name="kidAnimal">Ερίφιο</string>
    <string name="youngKidAnimal">Ερίφιο$lt$6μ</string>
    <string name="goatAnimal">Γίδα</string>
    <string name="lambAnimal">Αρνί</string>
    <string name="youngSheepAnimal">Αρνί$lt$6μ</string>
    <string name="sheepAnimal">Προβατίνα</string>
    <string name="heGoatAnimal">Τράγος</string>
    <string name="ramAnimal">Κριάρι</string>
    <string name="horseAnimal">Άλογο</string>
    <string name="notRareGenre">Όχι σπάνια</string>
    <string name="skopelos">Σκοπέλου</string>
    <string name="katafygiou">Καταφυγίου</string>
    <string name="roumloukiou">Ρουμλουκίου</string>
    <string name="oreino_hpeirou">Ορεινό Ηπείρου</string>
    <string name="ikarias">Ικαρίας</string>
    <string name="leukimhs">Λευκίμης</string>
    <string name="katsika">Κατσικά</string>
    <string name="argous">Άργους</string>
    <string name="zakynthou">Ζακύνθου</string>
    <string name="florinas">Φλώρινας - Πελαγονίας</string>
    <string name="sarakatsaniko">Σαρακατσάνικο</string>
    <string name="glossasSkopelou">Γλώσσας Σκοπέλου</string>
    <string name="kymhs">Κύμης</string>
    <string name="agriniou">Αγρινίου</string>
    <string name="dramas">Δράμας</string>
    <string name="thrakis">Θράκης</string>
    <string name="kalarrytiko">Καλαρρύτικο</string>
    <string name="phliou">Πηλίου</string>
    <string name="serron">Σερρών</string>
    <string name="hleias">Ηλείας</string>
    <string name="phneias">Πηνείας</string>
    <string name="thessalias">Θεσσαλίας</string>
    <string name="skyrou">Σκύρου</string>
    <string name="pindou">Πίνδου</string>
    <string name="messaras">Μεσσαράς</string>
    <string name="commentEmpty"></string>
    <string name="commentSale">ΠΩΛ</string>
    <string name="commentDeath">ΘΑΝ</string>
    <string name="commentSlaughtered">ΣΦΓ</string>
    <string name="commentDouble">ΔΠΛ</string>
    <string name="commentSingle">ΜΟΝ</string>
    <string name="commentError">ΛΘΣ</string>
    <string name="title_activity_inspection_step_photo">Ψηφιοποιήση εγγράφου</string>
    <string name="title_activity_inspection_view2">Εμφάνιση ενωτίων ελέγχου</string>
    <string name="title_activity_inspection_viewPhotoActivity">Προβολή σκαναρισμένων εγγράφων</string>
    <string name="title_activity_inspection_step_four">Καταχώρηση ζώων με συμβατικά ενώτια</string>
    <string name="title_activity_inspection_step_five">Ζώα χωρίς σήμανση</string>
    <string name="nextProducer">Επόμενος παραγωγός</string>
    <string name="previousProducer">Προηγούμενος Παραγωγός</string>
    <string name="conventionalTagScreenLabel">Ζώα με συμβατικά ενώτια</string>
    <string name="outOfRegistry">Εκτός μητρώου</string>
    <string name="scanner_sync_description">Μεταφέρει Sessions από το Scanner</string>
    <string name="numberOfSyncedFiles">Synced %1$d files</string>
    <string name="tagId">Ταυτότητα</string>
    <string name="timestamp">Ώρα</string>
    <string name="species">Είδος</string>
    <string name="genre">Φυλή</string>
    <string name="producer">Παραγωγός</string>
    <string name="inRegister">Στο μητρώο;</string>
    <string name="comments">Σχόλια</string>
    <string name="tinIncorrect">Το ΑΦΜ δεν είναι σωστό</string>
</resources>
