<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr.petalidis.datamars.activities.StartActivity">

    <Button
        android:id="@+id/synchronizeDatamarsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Μεταφέρει Sessions από το Scanner"
        android:onClick="showExternalStorage"
        android:text="@string/synchronizeText"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/viewStoredSessions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="showDialog"
        android:text="@string/showSessionsText"
        android:textSize="20sp"

        />

    <Button
        android:id="@+id/inspectionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/inspectionFunctionsDescription"
        android:onClick="goToInspections"
        android:text="@string/inspectionFunctions"
        android:textSize="20sp"
        />

    <LinearLayout
        android:id="@+id/linear_layout_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/status_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </LinearLayout>

</LinearLayout>
